Lots of things happened, from trying to make a Widget to partially getting intents to work. Will focus on intents and widget and then do the time configuration

--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:enabled="true" android:name=".TheaterOn">
+            <intent-filter>
+                <action android:name="com.chernowii.theatertime.THEATER_ON" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
