--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -22,14 +22,6 @@
             </intent-filter>
         </activity>
 
-        <receiver
-            android:name=".TheaterOn"
-            android:enabled="true">
-            <intent-filter>
-                <action android:name="com.chernowii.theatertime.THEATER_ON" />
-            </intent-filter>
-        </receiver>
-
         <activity
             android:name=".SendMessageToWatch"
             android:label="@string/app_name" />
@@ -37,7 +29,9 @@
             android:name=".Welcome"
             android:label="@string/title_activity_welcome"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ActivityOn"></activity>
+
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
