--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -12,14 +12,20 @@
         android:theme="@android:style/Theme.DeviceDefault">
         <activity
             android:name=".TheaterWear"
-            android:label="@string/app_name">
+            android:label="@string/app_name"></activity>
 
-        </activity>
-        <service android:name=".ListenerForPhone" >
+        <service android:name=".ListenerForPhone">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
             </intent-filter>
         </service>
+
+        <activity
+            android:name=".TheaterModeOn"
+            android:label="@string/title_activity_theater_mode_on"></activity>
+        <activity
+            android:name=".TheaterModeOff"
+            android:label="@string/title_activity_theater_mode_off"></activity>
     </application>
 
 </manifest>
