--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -22,9 +22,11 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".SendMessageToWatch"
-            android:label="@string/app_name" />
+        <receiver android:enabled="true" android:name=".on">
+                        <intent-filter>
+                            <action android:name="com.chernowii.theatertime.THEATER_ON" />
+                        </intent-filter>
+                    </receiver>
         <activity
             android:name=".Welcome"
             android:label="@string/title_activity_welcome"
